--- a/clinical/aortofemoral2.html
+++ b/clinical/aortofemoral2.html
@@ -55,7 +55,7 @@
               <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
               <div class="navBarSection">
                 <details>
-                  <summary class="navTitle">User Guides</summary>
+                  <summary class="navTitle"><i class="iconInHeader fa-regular fa-user"></i>User Guides</summary>
                   <div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
@@ -96,7 +96,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary class="navTitle">Clinical Cases</summary>
+                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
                       <p href="coronary.html">Coronary Normal</a>                  
@@ -116,7 +116,7 @@
                   </div>
                 </details>
                 <details>
-                  <summary class="navTitle">Developer Guides</summary>
+                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-laptop-code" style="padding-right: 14px;"></i>Developer Guides</summary>
                   <div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_developers">Compile Source Code</a>                  
