--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h1 id="features">Applications</h1>
       </div>
       <div class="newSectionContent">
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="featuresHeader">
               <h2>SimVascular</h2>
@@ -134,6 +134,8 @@
                 simulations</p>
             </div>
           </div>
+        </div>
+        <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="featuresHeader">
               <h2>svFSI</h2>
@@ -143,7 +145,7 @@
                 computational modeling of the cardiovascular system </p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12">
             <div class="featuresHeader">
               <h2>svOneDSolver</h2>
             </div>
@@ -152,7 +154,7 @@
                 deformable 1D vascular networks</p>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 col-12">
+          <div class="col-lg-4 col-md-6 col-12">
             <div class="featuresHeader">
               <h2>svZeroDSolver</h2>
             </div>
@@ -162,8 +164,9 @@
             </div>
           </div>
         </div>
-        <a style="text-align: center" class="featuresLinks" href="" target="_blank">Click here to learn more.</a>
       </div>
+      <a style="text-align: center" class="featuresLinks" href="" target="_blank">Click here to learn more.</a>
+    </div>
   </div>
 
     <div class="everyOtherSection">
