--- a/documentation/references.html
+++ b/documentation/references.html
@@ -16,6 +16,12 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   
+  <!-- Styles CSS -->
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/grayscale.css">
+  <link rel="stylesheet" href="../css/standards.css">
+  <link rel="stylesheet" href="../css/documentation.css">
+  
   <script>
     window.ZeroMd = {
       config: {
