change flowsolver to readme.md

--- a/documentation/flowsolver.html
+++ b/documentation/flowsolver.html
@@ -196,76 +196,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="flowsolver/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="flowsolver/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="overview">
-        <zero-md  src="flowsolver/_overview.md" no-shadow></zero-md>
+        <zero-md  src="flowsolver/overview/readme.md" no-shadow></zero-md>
       </span>
       <span id="bcphysics">
-        <zero-md src="flowsolver/_bcPhysics.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/bc_physics/readme.md" no-shadow></zero-md>
       </span>
       <span id="creatingjob">
-        <zero-md src="flowsolver/_creatingjob.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/creating_job/readme.md" no-shadow></zero-md>
       </span>
       <span id="basic">
-        <zero-md src="flowsolver/_basic.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/basic/readme.md" no-shadow></zero-md>
       </span>
       <span id="inflowbc">
-        <zero-md src="flowsolver/_inflowbc.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/inflow_bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="outletbc">
-        <zero-md src="flowsolver/_outletbc.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/outlet_bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="wallproperties">
-        <zero-md src="flowsolver/_wallproperties.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/wall_properties/readme.md" no-shadow></zero-md>
       </span>
       <span id="solverparameters">
-        <zero-md src="flowsolver/_solverparameters.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/solver_parameters/readme.md" no-shadow></zero-md>
       </span>
       <span id="creatingdata">
-        <zero-md src="flowsolver/_creatingdata.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/creating_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="runningjob">
-        <zero-md src="flowsolver/_runningjob.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/running_job/readme.md" no-shadow></zero-md>
       </span>
       <span id="postprocess">
-        <zero-md src="flowsolver/_postProcess.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/postprocess/readme.md" no-shadow></zero-md>
       </span>
       <span id="examples">
-        <zero-md src="flowsolver/_examples.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/examples/readme.md" no-shadow></zero-md>
       </span>
       <span id="example2">
-        <zero-md src="flowsolver/_example2.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/example_2/readme.md" no-shadow></zero-md>
       </span>
       <span id="example3">
-        <zero-md src="flowsolver/_example3.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/example_3/readme.md" no-shadow></zero-md>
       </span>
       <span id="example4">
-        <zero-md src="flowsolver/_example4.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/example_4/readme.md" no-shadow></zero-md>
       </span>
       <span id="appendix">
-        <zero-md src="flowsolver/_appendix.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/appendix/readme.md" no-shadow></zero-md>
       </span>
       <span id="solverconfiguration">
-        <zero-md src="flowsolver/_solverconfiguration.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/solver_configuration/readme.md" no-shadow></zero-md>
       </span>
       <span id="presolvercommands">
-        <zero-md src="flowsolver/_presolverCommands.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/presolver_commands/readme.md" no-shadow></zero-md>
       </span>
       <span id="bctfile">
-        <zero-md src="flowsolver/_bctFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/bct_file/readme.md" no-shadow></zero-md>
       </span>
       <span id="solverinp">
-        <zero-md id="embedMath" src="flowsolver/_solverInpGuide.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/solver_inp_guide/readme.md" no-shadow></zero-md>
       </span>
       <span id="impbcfile">
-        <zero-md src="flowsolver/_impFiles.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/imp_files/readme.md" no-shadow></zero-md>
       </span>
       <span id="rcrtfile">
-        <zero-md src="flowsolver/_rcrtFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/rcrt_file/readme.md" no-shadow></zero-md>
       </span>
       <span id="cortfile">
-        <zero-md src="flowsolver/_cortFile.md" no-shadow></zero-md>
+        <zero-md src="flowsolver/cort_file/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
