--- a/documentation/genbc.html
+++ b/documentation/genbc.html
@@ -158,19 +158,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="genbc/_introduction.md" no-shadow></zero-md>
+        <zero-md id="math" src="genbc/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="sv_prep">
-        <zero-md src="genbc/_sv_prep.md" no-shadow></zero-md>
+        <zero-md src="genbc/sv_prep/readme.md" no-shadow></zero-md>
       </span>
       <span id="genbc_setup">
-        <zero-md src="genbc/_genbc_setup.md" no-shadow></zero-md>
+        <zero-md src="genbc/setup/readme.md" no-shadow></zero-md>
       </span>
       <span id="final_steps">
-        <zero-md src="genbc/_final_steps.md" no-shadow></zero-md>
+        <zero-md src="genbc/final_steps/readme.md" no-shadow></zero-md>
       </span>
       <span id="pressure_waveform">
-        <zero-md src="genbc/_pressure_waveform.md" no-shadow></zero-md>
+        <zero-md src="genbc/pressure_waveform/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
