moving around more files

--- a/documentation/meshing.html
+++ b/documentation/meshing.html
@@ -172,46 +172,46 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="meshing/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="meshing/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenoverview">
-        <zero-md src="meshing/_tetgenOverview.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_overview/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgencreatemesh">
-        <zero-md src="meshing/_tetgenCreateMesh.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_create_mesh/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgeniso">
-        <zero-md src="meshing/_tetgenIsotropicMeshing.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_isotropic_meshing/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenboundarylayer">
-        <zero-md src="meshing/_tetgenBoundaryLayer.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_boundary_layer/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgetnradiusbased">
-        <zero-md src="meshing/_tetgenRadiusBasedMeshing.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_radius_based_meshing/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenlocalmeshing">
-        <zero-md src="meshing/_tetgenLocalSize.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_local_size/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgensphericalrefinement">
-        <zero-md src="meshing/_tetgenSphereRefinement.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_sphere_refinement/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenflags">
-        <zero-md src="meshing/_tetgenFlags.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_flags/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenadapt">
-        <zero-md src="meshing/_tetgenAdapt.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_adapt/readme.md" no-shadow></zero-md>
       </span>
       <span id="loadingmesh">
-        <zero-md src="meshing/_loadingmesh.md" no-shadow></zero-md>
+        <zero-md src="meshing/loading_mesh/readme.md" no-shadow></zero-md>
       </span>
       <span id="exportingmesh">
-        <zero-md src="meshing/_exportingMesh.md" no-shadow></zero-md>
+        <zero-md src="meshing/exporting_mesh/readme.md" no-shadow></zero-md>
       </span>
       <span id="tetgenerrors">
-        <zero-md src="meshing/_tetgenErrors.md" no-shadow></zero-md>
+        <zero-md src="meshing/tetgen_errors/readme.md" no-shadow></zero-md>
       </span>
       <span id="inspectingmeshes">
-        <zero-md src="meshing/_inspectingMeshes.md" no-shadow></zero-md>
+        <zero-md src="meshing/inspecting_meshes/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
