--- a/documentation/modeling.html
+++ b/documentation/modeling.html
@@ -193,76 +193,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="modelingIntro">
-        <zero-md id="math" src="modeling/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="modeling/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingPathPlanning">
-        <zero-md src="modeling/_pathPlanning.md" no-shadow></zero-md>
+        <zero-md src="modeling/path_planning/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingPath">
-        <zero-md src="modeling/_creatingPath.md" no-shadow></zero-md>
+        <zero-md src="modeling/creating_path/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingSmoothingPath">
-        <zero-md src="modeling/_smoothingPath.md" no-shadow></zero-md>
+        <zero-md src="modeling/smoothing_path/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingPaths">
-        <zero-md src="modeling/_importingExportingPaths.md" no-shadow></zero-md>
+        <zero-md src="modeling/importing_exporting_paths/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingSegmentation">
-        <zero-md src="modeling/_segmentation.md" no-shadow></zero-md>
+        <zero-md src="modeling/segmentation/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingUsingGroups">
-        <zero-md src="modeling/_usingGroups.md" no-shadow></zero-md>
+        <zero-md src="modeling/using_groups/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingThresholding">
-        <zero-md src="modeling/_thresholding.md" no-shadow></zero-md>
+        <zero-md src="modeling/thresholding/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingLevelSet">
-        <zero-md src="modeling/_levelSet.md" no-shadow></zero-md>
+        <zero-md src="modeling/level_set/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingMachineLearning">
-        <zero-md src="modeling/_machinelearning.md" no-shadow></zero-md>
+        <zero-md src="modeling/machine_learning/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingManual">
-        <zero-md src="modeling/_manual.md" no-shadow></zero-md>
+        <zero-md src="modeling/manual/readme.md" no-shadow></zero-md>
       </span>
       <span id="modeling3DSeg">
-        <zero-md src="modeling/_3DSeg.md" no-shadow></zero-md>
+        <zero-md src="modeling/3D_seg/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingCopyingPastingContours">
-        <zero-md src="modeling/_copyingPastingContours.md" no-shadow></zero-md>
+        <zero-md src="modeling/copying_pasting_contours/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingLoftingPreview">
-        <zero-md src="modeling/_loftingpreview.md" no-shadow></zero-md>
+        <zero-md src="modeling/lofting_preview/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingGroups">
-        <zero-md src="modeling/_importingExportingGroups.md" no-shadow></zero-md>
+        <zero-md src="modeling/importing_exporting_groups/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingPolyData">
-        <zero-md src="modeling/_solidModelingPolyData.md" no-shadow></zero-md>
+        <zero-md src="modeling/solid_modeling_poly_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsPolyData">
-        <zero-md src="modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
+        <zero-md src="modeling/creating_models_poly_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingPolyDataFaces">
-        <zero-md src="modeling/_polyDataFaces.md" no-shadow></zero-md>
+        <zero-md src="modeling/poly_data_faces/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingEditingPolyData">
-        <zero-md src="modeling/_editingPolyData.md" no-shadow></zero-md>
+        <zero-md src="modeling/editing_poly_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingCenterlinesPolyData">
-        <zero-md src="modeling/_centerlinesPolyData.md" no-shadow></zero-md>
+        <zero-md src="modeling/centerlines_poly_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingModels">
-        <zero-md src="modeling/_importingExportingModels.md" no-shadow></zero-md>
+        <zero-md src="modeling/importing_exporting_models/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingAnalytic">
-        <zero-md src="modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
+        <zero-md src="modeling/solid_modeling_analytic/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsAnalytic">
-        <zero-md src="modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
+        <zero-md src="modeling/creating_models_analytic/readme.md" no-shadow></zero-md>
       </span>
       <span id="modelingBlendingAnalytic">
-        <zero-md src="modeling/_blendingAnalytic.md" no-shadow></zero-md>
+        <zero-md src="modeling/blending_analytic/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
