update paths in html

--- a/clinical/coronary.html
+++ b/clinical/coronary.html
@@ -181,46 +181,46 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="coronary/_introduction.md" no-shadow></zero-md>
+        <zero-md id="math" src="coronary/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="anatomy_and_image">
-        <zero-md src="coronary/_anatomy_and_image_data.md" no-shadow></zero-md>
+        <zero-md src="coronary/anatomy_and_image_data/readme.md" no-shadow></zero-md>
       </span>
       <span id="model">
-        <zero-md src="coronary/_model_construction_and_meshing.md" no-shadow></zero-md>
+        <zero-md src="coronary/model_construction_and_meshing/readme.md" no-shadow></zero-md>
       </span>
       <span id="sim">
-        <zero-md src="coronary/_coronary_simulation.md" no-shadow></zero-md>
+        <zero-md src="coronary/coronary_simulation/readme.md" no-shadow></zero-md>
       </span>
       <span id="inflow_bc">
-        <zero-md src="coronary/_inflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/inflow_bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="aortic_bc">
-        <zero-md src="coronary/_aortic_outflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/aortic_outflow_bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="coronary_bc">
-        <zero-md src="coronary/_coronary_outflow_bc.md" no-shadow></zero-md>
+        <zero-md src="coronary/coronary_outflow_bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="parameter_selection">
-        <zero-md src="coronary/_parameter_selection.md" no-shadow></zero-md>
+        <zero-md src="coronary/parameter_selection/readme.md" no-shadow></zero-md>
       </span>
       <span id="wall_properties">
-        <zero-md src="coronary/_wall_properties.md" no-shadow></zero-md>
+        <zero-md src="coronary/wall_properties/readme" no-shadow></zero-md>
       </span>
       <span id="solver_params">
-        <zero-md src="coronary/_solver_parameters.md" no-shadow></zero-md>
+        <zero-md src="coronary/solver_parameters/readme.md" no-shadow></zero-md>
       </span>
       <span id="run_job">
-        <zero-md src="coronary/_run_job.md" no-shadow></zero-md>
+        <zero-md src="coronary/run_job/readme.md" no-shadow></zero-md>
       </span>
       <span id="results">
-        <zero-md src="coronary/_simulation_results.md" no-shadow></zero-md>
+        <zero-md src="coronary/simulation_results/readme.md" no-shadow></zero-md>
       </span>
       <span id="conclusion">
-        <zero-md src="coronary/_conclusion.md" no-shadow></zero-md>
+        <zero-md src="coronary/conclusion/readme.md" no-shadow></zero-md>
       </span>
       <span id="references">
-        <zero-md src="coronary/_references.md" no-shadow></zero-md>
+        <zero-md src="coronary/refs/readme.md" no-shadow></zero-md>
       </span>
 
 
