--- a/documentation/python_interface.html
+++ b/documentation/python_interface.html
@@ -175,58 +175,58 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="python_interface/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="python_interface/intro/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="python_prog_env">
-        <zero-md src="python_interface/_python_prog_env.md" no-shadow></zero-md>
+        <zero-md src="python_interface/intro/python_prog_env/readme.md" no-shadow></zero-md>
       </span>
       <span id="console">
-        <zero-md src="python_interface/_console.md" no-shadow></zero-md>
+        <zero-md src="python_interface/intro/console/readme.md" no-shadow></zero-md>
       </span>
       <span id="console_mode">
-        <zero-md src="python_interface/_console_mode.md" no-shadow></zero-md>
+        <zero-md src="python_interface/intro/console_mode/readme.md" no-shadow></zero-md>
       </span>
       <span id="text_edit_mode">
-        <zero-md src="python_interface/_text_edit_mode.md" no-shadow></zero-md>
+        <zero-md src="python_interface/intro/text_edit_mode/readme.md" no-shadow></zero-md>
       </span>
       <span id="python_shell">
-        <zero-md src="python_interface/_python_shell.md" no-shadow></zero-md>
+        <zero-md src="python_interface/intro/python_shell/readme.md" no-shadow></zero-md>
       </span>
       <span id="sv_modules">
-        <zero-md src="python_interface/modules/_sv_modules.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/sv_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="projects">
-        <zero-md src="python_interface/modules/_projects.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/projects/readme.md" no-shadow></zero-md>
       </span>
       <span id="help">
-        <zero-md src="python_interface/modules/_help.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/help/readme.md" no-shadow></zero-md>
       </span>
       <span id="function_arguments">
-        <zero-md src="python_interface/modules/_function_arguments.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/function_arguments/readme.md" no-shadow></zero-md>
       </span>
       <span id="error_handling">
-        <zero-md src="python_interface/modules/_error_handling.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/error_handling/readme.md" no-shadow></zero-md>
       </span>
       <span id="dmg_module">
-        <zero-md src="python_interface/modules/_dmg_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/dmg_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="geometry_module">
-        <zero-md src="python_interface/modules/_geometry_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/geometry_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="meshing_module">
-        <zero-md src="python_interface/modules/_meshing_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/meshing_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="modeling_module">
-        <zero-md src="python_interface/modules/_modeling_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/modeling_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="path_planning_module">
-        <zero-md src="python_interface/modules/_path_planning_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/path_planning_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="segmentation_module">
-        <zero-md src="python_interface/modules/_segmentation_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/segmentation_module/readme.md" no-shadow></zero-md>
       </span>
       <span id="vmtk_module">
-        <zero-md src="python_interface/modules/_vmtk_module.md" no-shadow></zero-md>
+        <zero-md src="python_interface/modules/vtmk_module/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
