--- a/documentation/references.html
+++ b/documentation/references.html
@@ -172,34 +172,34 @@
 
     <section class="docsSection" style="float: right">
       <span id="refSec1">
-        <zero-md id="math" src="references/_flowsolver.md" no-shadow></zero-md>
+        <zero-md id="math" src="references/flowsolver/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec2">
-        <zero-md src="references/_bc.md" no-shadow></zero-md>
+        <zero-md src="references/bc/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec3">
-        <zero-md src="references/_linsolver.md" no-shadow></zero-md>
+        <zero-md src="references/lin_solver/readme.md" no-shadow></zero-md>
       </span>
       <span id="FSI">
-        <zero-md src="references/_fsi.md" no-shadow></zero-md>
+        <zero-md src="references/fsi/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec4">
-        <zero-md src="references/_modeling.md" no-shadow></zero-md>
+        <zero-md src="references/modeling/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec5">
-        <zero-md src="references/_meshing.md" no-shadow></zero-md>
+        <zero-md src="references/meshing/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec6">
-        <zero-md src="references/_validation.md" no-shadow></zero-md>
+        <zero-md src="references/validation/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec7">
-        <zero-md src="references/_clinicalapps.md" no-shadow></zero-md>
+        <zero-md src="references/clinical_applications/readme.md" no-shadow></zero-md>
       </span>
       <span id="UQ">
-        <zero-md src="references/_uq.md" no-shadow></zero-md>
+        <zero-md src="references/uq/readme.md" no-shadow></zero-md>
       </span>
       <span id="refSec8">
-        <zero-md src="references/_othercontributors.md" no-shadow></zero-md>
+        <zero-md src="references/other_contributors/readme.md" no-shadow></zero-md>
       </span>      
     </section>
   </section>
