--- a/documentation/rom_simulation.html
+++ b/documentation/rom_simulation.html
@@ -178,67 +178,67 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="rom_simulation/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="rom_simulation/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="tool">
-        <zero-md src="rom_simulation/tool/_tool.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/tool/readme.md" no-shadow></zero-md>
       </span>
       <span id="mesh-panel">
-        <zero-md src="rom_simulation/tool/_mesh-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/mesh_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="basic-panel">
-        <zero-md src="rom_simulation/tool/_basic-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/basic_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="bcs-panel">
-        <zero-md src="rom_simulation/tool/_bcs-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/bcs_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="wall-props-panel">
         <zero-md src="rom_simulation/tool/_wall-props-panel.md" no-shadow></zero-md>
       </span>
       <span id="solver-params-panel">
-        <zero-md src="rom_simulation/tool/_solver-params-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/solver_params_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="create-files-panel">
-        <zero-md src="rom_simulation/tool/_create-files-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/create_files_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="convert-results-panel">
-        <zero-md src="rom_simulation/tool/_convert-results-panel.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/convert_results_panel/readme.md" no-shadow></zero-md>
       </span>
       <span id="tool-tutorial">
-        <zero-md src="rom_simulation/tool/_tutorial.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/tutorial/readme.md" no-shadow></zero-md>
       </span>
       <span id="tool-refs">
-        <zero-md src="rom_simulation/tool/_refs.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/tool/refs/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver">
-        <zero-md src="rom_simulation/1d-solver/_solver.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/solver/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-theory">
-        <zero-md src="rom_simulation/1d-solver/_theory.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/theory/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-user-guide">
-        <zero-md src="rom_simulation/1d-solver/_user-guide.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/user_guide/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-input-file">
-        <zero-md src="rom_simulation/1d-solver/_input-file.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/input_file/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-example-bifurcation-rcr">
-        <zero-md src="rom_simulation/1d-solver/_example-bifurcation-rcr.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/example_bifurcation_rcr/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-example-tube-resistance">
-        <zero-md src="rom_simulation/1d-solver/_example-tube-resistance.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/example_tube_resistance/readme.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-refs">
-        <zero-md src="rom_simulation/1d-solver/_refs.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/1d-solver/refs/readme.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver">
-        <zero-md src="rom_simulation/0d-solver/_solver.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/0d-solver/solver/readme.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver-theory">
-        <zero-md src="rom_simulation/0d-solver/_theory.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/0d-solver/theory/readme.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver-refs">
-        <zero-md src="rom_simulation/0d-solver/_refs.md" no-shadow></zero-md>
+        <zero-md src="rom_simulation/0d-solver/refs/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
