--- a/documentation/svfsi.html
+++ b/documentation/svfsi.html
@@ -168,34 +168,34 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md id="math" src="svfsi/main/_intro.md" no-shadow></zero-md>
+        <zero-md id="math" src="svfsi/main/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="feature">
-        <zero-md src="svfsi/main/_feature.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/feature/readme.md" no-shadow></zero-md>
       </span>
       <span id="input">
-        <zero-md src="svfsi/main/_input.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="mesh">
-        <zero-md src="svfsi/main/_mesh.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/mesh/readme.md" no-shadow></zero-md>
       </span>
       <span id="run">
-        <zero-md src="svfsi/main/_run_simulation.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/run_simulation/readme.md" no-shadow></zero-md>
       </span>
       <span id="resource">
-        <zero-md src="svfsi/main/_resource.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/resource/readme.md" no-shadow></zero-md>
       </span>
       <span id="install">
-        <zero-md src="svfsi/main/_install.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/install/readme.md" no-shadow></zero-md>
       </span>
       <span id="installer">
-        <zero-md src="svfsi/main/_install_installer.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/install_installer/readme.md" no-shadow></zero-md>
       </span>
       <span id="container">
-        <zero-md src="svfsi/main/_install_container.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/install_container/readme.md" no-shadow></zero-md>
       </span>
       <span id="source">
-        <zero-md src="svfsi/main/_install_source.md" no-shadow></zero-md>
+        <zero-md src="svfsi/main/install_source/readme.md" no-shadow></zero-md>
       </span>
     
     </section>
