--- a/documentation/template.html
+++ b/documentation/template.html
@@ -159,28 +159,28 @@
 
     <section class="docsSection" style="float: right">
       <span id="section_1">
-        <zero-md id="math" src="template/section_1.md" no-shadow></zero-md>
+        <zero-md id="math" src="template/section_1/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_1_sub_section_1">
-        <zero-md  src="template/section_1_sub_section_1.md" no-shadow></zero-md>
+        <zero-md  src="template/section_1/sub_section_1/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_1_sub_section_2">
-        <zero-md src="template/section_1_sub_section_2.md" no-shadow></zero-md>
+        <zero-md src="template/section_1/sub_section_2/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_1_sub_section_3">
-        <zero-md src="template/section_1_sub_section_3.md" no-shadow></zero-md>
+        <zero-md src="template/section_1/sub_section_3/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_2">
-        <zero-md src="template/section_2.md" no-shadow></zero-md>
+        <zero-md src="template/section_2/intro/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_2_sub_section_1">
-        <zero-md src="template/section_2_sub_section_1.md" no-shadow></zero-md>
+        <zero-md src="template/section_2/sub_section_1/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_2_sub_section_2">
-        <zero-md src="template/section_2_sub_section_2.md" no-shadow></zero-md>
+        <zero-md src="template/section_2/sub_section_2/readme.md" no-shadow></zero-md>
       </span>
       <span id="section_2_sub_section_3">
-        <zero-md src="template/section_2_sub_section_3.md" no-shadow></zero-md>
+        <zero-md src="template/section_2/sub_section_3/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
