--- a/clinical/pulmonary.html
+++ b/clinical/pulmonary.html
@@ -166,19 +166,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="sec1">
-        <zero-md id="math" src="pulmonary/_significance.md" no-shadow></zero-md>
+        <zero-md id="math" src="pulmonary/significance/readme.md" no-shadow></zero-md>
       </span>
       <span id="sec2">
-        <zero-md src="pulmonary/_data.md" no-shadow></zero-md>
+        <zero-md src="pulmonary/data/readme.md" no-shadow></zero-md>
       </span>
       <span id="sec3">
-        <zero-md src="pulmonary/_description.md" no-shadow></zero-md>
+        <zero-md src="pulmonary/description/readme.md" no-shadow></zero-md>
       </span>
       <span id="sec4">
-        <zero-md src="pulmonary/_boundary.md" no-shadow></zero-md>
+        <zero-md src="pulmonary/boundary/readme.md" no-shadow></zero-md>
       </span>
       <span id="sec5">
-        <zero-md src="pulmonary/_results.md" no-shadow></zero-md>
+        <zero-md src="pulmonary/results/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
