fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <table id="contentOfSkip">
                 <tr class="skipTo capabilities">
                   <th>
-                    <p class="skipItem">Capablities</p>
+                    <p class="skipItem">Capabilities</p>
                   </th>
                 </tr>
                 <tr class="skipTo applications">
