edit header style and slideshow width

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <h1 id="capabilities">Its Capabilities</h1>
       </div>
       <div class="newSectionContent">
-        <p class="subText">
+        <p class="subText" style="padding-left: 12%; padding-right: 12%; font-size: 22px">
           Simvascular is the only fully open-source software package providing a complete pipeline 
           from medical image data segmentation to patient specific blood flow simulation 
           and analysis.
@@ -420,8 +420,8 @@
       <h1 id="gallery">Gallery</h1>
     </div>
 
-    <div class="newSectionContent">
-      <div class="col-sm-6 col-12">
+    <div class="newSectionContent" style="padding-bottom: 30px;">
+      <!-- <div class="col-sm-6 col-12">
         <div class="col-sm-6 col-12 headerForGalleryContainer">
           <div class="headerForGallery">
             <h2>
@@ -429,7 +429,7 @@
               Pictures
             </h2>
           </div>
-        </div>
+        </div> -->
         <div>
           <!-- Slideshow container -->
           <div id="slideshow-container">
@@ -467,7 +467,7 @@
               </div>
           </div>
         </div>
-      </div>
+      <!-- </div>
       <div class="col-sm-6 col-12">
         <div class="col-sm-6 col-12 headerForGalleryContainer">
           <div class="headerForGallery">
@@ -477,7 +477,7 @@
             </h2>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
