update team and add contributors and sponsors pg?

--- a/index.html
+++ b/index.html
@@ -593,6 +593,12 @@
   <div style="padding-bottom: 30px">
     <div class="newSectionHeader">
       <h1 id="team">Team</h1>
+      <p class="subText">
+        <a style="font-size: 22px;" href="contributors.html" target="_blank">
+          For complete list of contributors
+          <i style="font-size: 18px;" class="fa-solid fa-arrow-up-right-from-square"></i>
+        </a>
+      </p>
     </div>
     <div class="team-container">
       <div class="row">
@@ -632,19 +638,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-6">
-        <div class="team-item">
-          <div class="team-triangle">
-            <div class="team-content" id="nwilson">
-              <img src="img/nwilson.jpeg" alt="Image of Nathan Wilson">
-              <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Nathan Wilson</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-6">
+      <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
             <div class="team-content" id="vvedula">
@@ -656,7 +650,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-6">
+      <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
             <div class="team-content" id="mpfaller">
@@ -668,13 +662,13 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-12">
+      <div class="col-md-4 col-6">
         <div class="team-item">
           <div class="team-triangle">
-            <div class="team-content" id="fkong">
-              <img src="img/fkong.png" alt="Image of Fanwei Kong">
+            <div class="team-content" id="lpegolotti">
+              <img src="img/lpegolotti.jpeg" alt="Image of Luca Pegolotti">
               <div class="team-hover text-center"  style="cursor:pointer">
-                <p style="font-size: 17px;">Fanwei Kong</p>
+                <p style="font-size: 17px;">Luca Pegolotti</p>
               </div>
             </div>
           </div>
@@ -690,13 +684,13 @@
     </div>
     <div class="newSectionContent">
       <div class="row creditsRow">
-        <div class="threeTopImages col-sm-6 col-12 creditContainer">
+        <div class="col-sm-6 col-12 creditContainer">
           <img class="creditImage" src="img/stanfordmedicine.jpg" alt="Logo for Stanford Medicine"></img>
         </div>
-        <div class="threeTopImages col-sm-6 col-12 creditContainer">
+        <div class="col-sm-6 col-12 creditContainer">
           <img class="creditImage" src="img/ucberkeley.png" alt="Logo for UC Berkeley"></img>
         </div>
-        <div class="threeTopImages col-sm-4 col-12 creditContainer">
+        <div class="col-sm-4 col-12 creditContainer">
           <img class="creditImage" src="img/osmsc.png" alt="Logo for osmsc"></img>
         </div>
       </div>
@@ -706,17 +700,26 @@
   <div>
     <div class="newSectionHeader">
       <h1 id="acknowledgements">Acknowledgements</h1>
+      <p class="subText">
+        <a style="font-size: 22px;" href="sponsors_info.html" target="_blank">
+          For more details on sponsors
+          <i style="font-size: 18px;" class="fa-solid fa-arrow-up-right-from-square"></i>
+        </a>
+      </p>
     </div>
     <div class="newSectionContent">
-      <div class="row creditsRow">
-        <div class="threeTopImages col-sm-4 col-12 creditContainer">
+      <div class="row creditsRow gx-5">
+        <div class="col-sm-6 col-12 creditContainer p-5">
           <img class="creditImage" src="img/simtk.png" alt="Logo for SimTK"></img>
         </div>
-        <div class="threeTopImages col-sm-4 col-12 creditContainer">
+        <div class="col-sm-6 col-12 creditContainer p-5">
+          <img class="creditImage" src="img/nsf.png" alt="Logo for NSF"></img>
+        </div>
+        <div class="col-sm-6 col-12 creditContainer p-5">
           <img class="creditImage" src="img/NIH.png" alt="Logo for NIH"></img>
         </div>
-        <div class="threeTopImages col-sm-4 col-12 creditContainer">
-          <img class="creditImage" src="img/nsf.png" alt="Logo for NSF"></img>
+        <div class="col-sm-6 col-12 creditContainer p-5">
+          <img class="creditImage" src="img/addventures.png" alt="Logo for SimTK"></img>
         </div>
       </div>
     </div>
